fix table alignment

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -13,27 +13,32 @@
     border-right: none;
   }*/
 .centered {
-  padding-bottom: 1em;
   text-align: center;
 }
 
 table, th, td {
   border: 1px solid black;
-  padding: 4em;
   margin: 4em;
 }
 
-tr:hover {background-color: #f5f5f5}
+tr:hover {
+  background-color: #f5f5f5;
+}
 
 td, tr {
   height: 4em;
-  width: 10em;
+  width: 12em;
 }
 
 table {
-  position:relative;
-  left: 25%;
+  margin-left:auto;
+  margin-right:auto;
+}
 
+.table_title {
+  margin-bottom:0;
+  position: relative;
+  top: 2em;
 }
 
 .site_title {
